--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blue_083">#083E66</color>
+    <color name="blue_114">#114C82</color>
+    <color name="blue_3d7">#3D76BD</color>
+    <color name="blue_6ca">#6CA9EA</color>
 </resources>
