added search and retrofit

--- a/app/src/main/res/layout/activity_detail_github_user.xml
+++ b/app/src/main/res/layout/activity_detail_github_user.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="@color/white"
-    tools:context=".ui.contents.githubusers.activities.DetailGithubUserActivity">
+    tools:context=".ui.contents.githubusers.features.detailuser.DetailGithubUserActivity">
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civ_image_github_user"
@@ -15,7 +24,7 @@
         android:src="@drawable/icon_github"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFF"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +34,7 @@
         android:id="@+id/tv_name"
         android:text="@string/default_text_name_of_github_user"
         android:layout_width="wrap_content"
+        android:maxWidth="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/civ_image_github_user"
         android:layout_marginTop="20dp"
@@ -37,6 +47,7 @@
         android:id="@+id/tv_username"
         android:text="@string/default_username_of_github_user"
         android:layout_width="wrap_content"
+        android:maxWidth="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv_name"
         android:layout_marginTop="5dp"
@@ -58,6 +69,7 @@
     <TextView
         android:id="@+id/tv_amount_repository"
         android:text="@string/repositories"
+        android:maxWidth="300dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -81,6 +93,7 @@
     <TextView
         android:id="@+id/tv_amount_followers"
         android:text="@string/amount_followers"
+        android:maxWidth="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -93,6 +106,7 @@
     <TextView
         android:id="@+id/tv_amount_following"
         android:text="@string/amount_following"
+        android:maxWidth="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -116,6 +130,7 @@
     <TextView
         android:id="@+id/tv_location"
         android:text="@string/default_location"
+        android:maxWidth="300dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -138,6 +153,8 @@
     <TextView
         android:id="@+id/tv_company"
         android:text="@string/default_company"
+        android:textAlignment="center"
+        android:maxWidth="300dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
