--- a/app/src/main/res/layout/item_github_user.xml
+++ b/app/src/main/res/layout/item_github_user.xml
@@ -10,36 +10,32 @@
         android:id="@+id/civ_image_github_user"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/icon_github"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFF"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_item_github_user_name"
-        android:text="@string/default_text_name_of_github_user"
-        style="@style/customBoldFont"
-        android:layout_width="wrap_content"
-        android:maxWidth="300dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"
+    <ProgressBar
         app:layout_constraintTop_toTopOf="@id/civ_image_github_user"
-        app:layout_constraintStart_toEndOf="@id/civ_image_github_user"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintBottom_toBottomOf="@id/civ_image_github_user"
+        app:layout_constraintStart_toStartOf="@id/civ_image_github_user"
+        app:layout_constraintEnd_toEndOf="@id/civ_image_github_user"
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_item_github_user_username"
         android:text="@string/default_username_of_github_user"
+        style="@style/customBoldFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="300dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_item_github_user_name"
-        app:layout_constraintStart_toStartOf="@id/tv_item_github_user_name"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/civ_image_github_user"
+        app:layout_constraintTop_toTopOf="@id/civ_image_github_user"
+        app:layout_constraintStart_toEndOf="@id/civ_image_github_user"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
