--- a/app/src/main/res/layout/activity_favorite_user.xml
+++ b/app/src/main/res/layout/activity_favorite_user.xml
@@ -4,25 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ui.contents.githubusers.activities.GitHubUsersActivity">
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    tools:context=".ui.contents.githubusers.features.detailuser.favoriteuser.FavoriteUserActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_github_users"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_github_user"/>
-    
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/empty_layout"
         android:orientation="vertical"
@@ -37,10 +27,11 @@
 
         <TextView
             android:id="@+id/tv_empty"
-            android:text="@string/not_found_data"
+            android:text="Data tidak ditemukan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
