--- a/app/src/main/res/layout/activity_detail_github_user.xml
+++ b/app/src/main/res/layout/activity_detail_github_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.contents.githubusers.features.detailuser.DetailGithubUserActivity">
+    tools:context=".ui.contents.githubusers.features.detailuser.activities.DetailGithubUserActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_detail_user"
@@ -61,7 +61,7 @@
 
         <ImageView
             android:id="@+id/iv_followers"
-            android:src="@drawable/icon_followers"
+            android:src="@drawable/ic_baseline_people_alt_24"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
@@ -98,7 +98,7 @@
 
         <ImageView
             android:id="@+id/iv_repository"
-            android:src="@drawable/icon_repository"
+            android:src="@drawable/ic_baseline_folder_shared_24"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
@@ -123,7 +123,7 @@
 
         <ImageView
             android:id="@+id/iv_location"
-            android:src="@drawable/icon_location"
+            android:src="@drawable/ic_baseline_location_on_24"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
@@ -146,7 +146,7 @@
 
         <ImageView
             android:id="@+id/iv_company"
-            android:src="@drawable/icon_company"
+            android:src="@drawable/ic_baseline_home_work_24"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
