--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.contents.githubusers.features.detailuser.FollowingFragment">
+    tools:context=".ui.contents.githubusers.features.detailuser.fragments.FollowingFragment">
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -24,6 +24,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/empty_layout"
         android:orientation="vertical"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
