--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,25 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.GitHubUserAppDicoding" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/blue_114</item>
+        <item name="colorPrimaryVariant">@color/blue_083</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/blue_6ca</item>
+        <item name="colorSecondaryVariant">@color/blue_3d7</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!-- Customize text -->
+        <item name="android:fontFamily">@font/quicksand_regular</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="customBoldFont" parent="@android:style/TextAppearance.Medium">
+        <item name="fontFamily">@font/quicksand_bold</item>
+        <item name="android:textSize">20sp</item>
     </style>
 </resources>
